# Primes-Pascal-Triangle-Fibonacci-Collatz

./: 59104 primes  collatz.py  fibonacci.py  main.py  mandelbrot.py  pascal.py  pyproject.toml
primes/: source.py  utility.py
