[tool.poetry]
name = "primes-or-pascal-triangle-or-fibonacci-or-collatz"
version = "0.1.0"
description = ""
authors = ["ckounter <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
